<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="end"
    >

    <TextView
        android:id="@+id/dialog_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_option"
        android:textSize="18sp" />
    <Spinner
        android:id="@+id/dialog_spinner"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textSize="18sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialogOK"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            />
        <Button
            android:id="@+id/dialogCancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />
    </LinearLayout>
</LinearLayout>